--- a/FaceWeb/Base.lproj/Main.storyboard
+++ b/FaceWeb/Base.lproj/Main.storyboard
@@ -6,13 +6,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Sign InVC-->
+        <!--SignInVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="SignInVC" customModule="FaceWeb" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="SignInVC" customClass="SignInVC" customModule="FaceWeb" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -20,11 +21,107 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4aJ-vt-1gQ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopes-logo" translatesAutoresizingMaskIntoConstraints="NO" id="G2p-mE-5Dq">
+                                        <rect key="frame" x="112" y="17" width="150" height="94"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="G2p-mE-5Dq" firstAttribute="centerY" secondItem="4aJ-vt-1gQ" secondAttribute="centerY" id="PYf-xg-rx7"/>
+                                    <constraint firstItem="G2p-mE-5Dq" firstAttribute="centerX" secondItem="4aJ-vt-1gQ" secondAttribute="centerX" id="XU3-y3-NTy"/>
+                                    <constraint firstAttribute="height" constant="128" id="cdU-Dg-Muf"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ec-0V-HWE">
+                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you haven't signed in before, an account will be automatically created for you" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="euh-R8-F7t">
+                                        <rect key="frame" x="0.0" y="7" width="375" height="36"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="0.87" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.51372549019607838" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="euh-R8-F7t" secondAttribute="trailing" id="1N3-Yx-HmL"/>
+                                    <constraint firstAttribute="height" constant="50" id="7Ol-YW-a6o"/>
+                                    <constraint firstItem="euh-R8-F7t" firstAttribute="leading" secondItem="3Ec-0V-HWE" secondAttribute="leading" id="8j6-hC-Ezh"/>
+                                    <constraint firstItem="euh-R8-F7t" firstAttribute="centerY" secondItem="3Ec-0V-HWE" secondAttribute="centerY" id="eTF-1G-8m2"/>
+                                    <constraint firstItem="euh-R8-F7t" firstAttribute="centerX" secondItem="3Ec-0V-HWE" secondAttribute="centerX" id="hNs-3j-jo4"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sign in method:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Teb-FC-Hvb">
+                                <rect key="frame" x="0.0" y="143" width="375" height="23.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.86847174657534243" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="brK-EN-Unb">
+                                <rect key="frame" x="113" y="186.5" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.22943970561027527" green="0.34702008962631226" blue="0.59602290391921997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="3oU-yX-W4v"/>
+                                    <constraint firstAttribute="height" constant="150" id="Tbn-pL-PqK"/>
+                                </constraints>
+                                <state key="normal" image="f"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="GFG-aP-0PQ">
+                                <rect key="frame" x="36" y="386.5" width="303" height="126"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gbs-dj-Upl">
+                                        <rect key="frame" x="0.0" y="0.0" width="303" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.8690336044520548" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LOG-3m-MyH">
+                                        <rect key="frame" x="0.0" y="45" width="303" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.86809717465753422" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rtb-qz-ZNe">
+                                        <rect key="frame" x="0.0" y="90" width="303" height="36"/>
+                                        <color key="backgroundColor" red="0.72088402509689331" green="0.30071014165878296" blue="0.13533329963684082" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <state key="normal" title="Sign In">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="GFG-aP-0PQ" firstAttribute="top" secondItem="brK-EN-Unb" secondAttribute="bottom" constant="50" id="4h3-Gy-TWW"/>
+                            <constraint firstAttribute="trailing" secondItem="4aJ-vt-1gQ" secondAttribute="trailing" id="C86-Sg-slx"/>
+                            <constraint firstItem="Teb-FC-Hvb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="H8W-VW-Fyf"/>
+                            <constraint firstItem="3Ec-0V-HWE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Jmz-Vn-8TM"/>
+                            <constraint firstItem="brK-EN-Unb" firstAttribute="top" secondItem="Teb-FC-Hvb" secondAttribute="bottom" constant="20" id="Kfs-ix-NbC"/>
+                            <constraint firstItem="brK-EN-Unb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P3j-Su-Zmo"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3Ec-0V-HWE" secondAttribute="bottom" id="Qly-HH-Ec4"/>
+                            <constraint firstItem="4aJ-vt-1gQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="RSY-TF-rqx"/>
+                            <constraint firstItem="4aJ-vt-1gQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="RVy-EI-x2G"/>
+                            <constraint firstAttribute="trailing" secondItem="Teb-FC-Hvb" secondAttribute="trailing" id="cgu-8Q-SLe"/>
+                            <constraint firstItem="GFG-aP-0PQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="dd2-cN-VP5"/>
+                            <constraint firstAttribute="trailing" secondItem="3Ec-0V-HWE" secondAttribute="trailing" id="gF8-5P-viz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GFG-aP-0PQ" secondAttribute="trailing" constant="20" id="mCE-cQ-aqv"/>
+                            <constraint firstItem="Teb-FC-Hvb" firstAttribute="top" secondItem="4aJ-vt-1gQ" secondAttribute="bottom" constant="15" id="sro-oY-7ff"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="36.431784107946029"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="devslopes-logo" width="150" height="94"/>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
