--- a/FaceWeb/Base.lproj/Main.storyboard
+++ b/FaceWeb/Base.lproj/Main.storyboard
@@ -90,7 +90,7 @@
                                         <rect key="frame" x="0.0" y="39" width="303" height="24"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.86809717465753422" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rtb-qz-ZNe" customClass="FancyButton" customModule="FaceWeb" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="78" width="303" height="36"/>
@@ -99,6 +99,9 @@
                                         <state key="normal" title="Sign In">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="signInTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bd5-Wx-yEW"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -121,6 +124,10 @@
                             <constraint firstItem="Teb-FC-Hvb" firstAttribute="top" secondItem="4aJ-vt-1gQ" secondAttribute="bottom" constant="15" id="sro-oY-7ff"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailField" destination="Gbs-dj-Upl" id="QcA-m5-ylc"/>
+                        <outlet property="passField" destination="LOG-3m-MyH" id="jJg-oW-4oK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
