--- a/FaceWeb/Base.lproj/Main.storyboard
+++ b/FaceWeb/Base.lproj/Main.storyboard
@@ -127,11 +127,50 @@
                     <connections>
                         <outlet property="emailField" destination="Gbs-dj-Upl" id="QcA-m5-ylc"/>
                         <outlet property="passField" destination="LOG-3m-MyH" id="jJg-oW-4oK"/>
+                        <segue destination="nzx-ml-nLD" kind="show" identifier="GoToFeed" id="Tde-h6-BlC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="24.800000000000001" y="36.431784107946029"/>
+        </scene>
+        <!--FeedVC-->
+        <scene sceneID="w6x-N4-qvZ">
+            <objects>
+                <viewController id="nzx-ml-nLD" customClass="FeedVC" customModule="FaceWeb" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EPz-ho-Nkg"/>
+                        <viewControllerLayoutGuide type="bottom" id="mXJ-hw-HXY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="g6q-YB-yFw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OuO-Qh-wPb">
+                                <rect key="frame" x="143" y="318" width="89" height="30"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Sign Out">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="signOutTapped:" destination="nzx-ml-nLD" eventType="touchUpInside" id="lSn-Wy-lGz"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.002492246450856328" green="0.58062481880187988" blue="0.62789946794509888" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="OuO-Qh-wPb" firstAttribute="centerY" secondItem="g6q-YB-yFw" secondAttribute="centerY" id="5Lh-Fl-8CR"/>
+                            <constraint firstItem="OuO-Qh-wPb" firstAttribute="centerX" secondItem="g6q-YB-yFw" secondAttribute="centerX" id="aZi-mq-7Cf"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="signOutTapped" destination="OuO-Qh-wPb" id="qug-3u-8A3"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="SignOut" id="hBO-fL-2gI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mw0-nw-1mf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="844" y="37.331334332833585"/>
         </scene>
     </scenes>
     <resources>
